--- a/index.html
+++ b/index.html
@@ -15,35 +15,32 @@
     <meta property="og: description" copntent="Empresa 100% Cordobesa">
     <meta property="og: image" copntent="assets/img/logofooter">
     <title>Nueva Medicina</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="assets/img/icono_logo.ico">
-    <script defer src="./js/app.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../assets/img/icono_logo.ico">
 </head>
-
-<!--------------------------------------------------- NAV BAR -->
 
 <body>
     <header class="topheader">
         <nav class="topnav">
-            <a href="index.html" class="logo">
-                <img src="assets/img/logo.png" alt="logo">
+            <a href="../index.html" class="logo">
+                <img src="../assets/img/logo.png" alt="logo">
             </a>
             <button class="open-menu" aria-label="abrir menu">
-                <img src="assets/img/bars.svg" alt="abrir menu">
+                <img src="../assets/img/bars.svg" alt="abrir menu">
             </button>
+            <!----------------------------------------- MENU -->
             <ul class="menu">
-                <button class="close-menu" aria-label="cerrar menu">
-                    <img src="assets/img/close.svg" alt="cerrar menu">
+                <button class="close-menu" aria-label="Cerrar menú">
+                    <img height="50" width="70" src="assets/img/close.svg" alt="cerrar menu">
                 </button>
-                <li><a href="pages/prestaciones.html">Prestaciones</a></li>
-                <li><a href="#suc">Sucursales</a></li>
-                <li><a href="#us">Nosotros</a></li>
-                <li><a href="#contact">Contacto</a></li>
-                <li><a href="pages/login.html">Ingresar</a></li>
+                <li><a href="#suc">sucursales</a></li>
+                <li><a href="#us">nosotros</a></li>
+                <li><a href="#contact">contacto</a></li>
+                <li><a href="../pages/prestaciones.html">prestaciones</a></li>
+                <li><a class="login" href="../pages/login.html">ingresar</a></li>
             </ul>
         </nav>
     </header>
-
     <!--------------------------------------------- BANNER INDEX -->
     <section class="main_index" id="index">
         <h1>TE CUIDAMOS</h1>
@@ -54,121 +51,98 @@
 
 
     <!---------------------------------------- SECC SUCURSALES -->
-    <div class="container">
-        <section class="main_suc" id="suc">
-            <div class="title">
-                <h1>PRINCIPALES SUCURSALES</h1>
+    <section class="main_suc" id="suc">
+        <div class="title">
+            <h1><i>CASA CENTRAL</i></h1>
+        </div>
+        <div class="vid">
+            <iframe height="100%" width="100%" src="https://www.youtube.com/embed/FtD7hBacnTo"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+        </div>
+        <div class="form-suc">
+            <h1>Busqueda de sucursales:</h1>
+            <form method="post"><select class="CmbBoxSucursal" required>
+                    <option value="seleccione">Seleccione una sucursal</option>
+                    <option value="cordoba">Córdoba</option>
+                    <option value="mendoza">Mendoza</option>
+                    <option value="bsAs">Buenos Aires</option>
+                    <option value="rioNegro">Rio Negro</option>
+                    <option value="jujuy">Jujuy</option>
+                    <option value="sanJuan">San Juan</option>
+                    <option value="tierraDelFuego">Tierra del Fuego</option>
+                    <option value="sanLuis">San Luis</option>
+                </select>
+            </form>
+        </div>
+    </section>
+
+
+    <!---------------------------------------- SECC ABOUT US -->
+
+    <section class="main_us" id="us">
+
+        <divc class="historia">
+
+        </divc>
+    </section>
+
+    <section class="main_contact" id="contact">
+
+
+        <!-------------------------- CARRUSEL -->
+        <div class="h2-carrusel">
+            <h2><i>QUIENES CONFIAN EN <span>NOSOTROS</span></i></h2>
+        </div>
+        <div class="carrusel" id="slider">
+        </div>
+
+        <!------------------------------------------ SECC CONTACTO -->
+        <div class="form-contact">
+            <form method="post" class="box-c1">
+                <p>Nombre:</p> <input type="text" name="nombre" required><br><br>
+                <p>Apellido:</p><input type="text" name="apellido" required><br><br>
+                <p>E-mail:</p><input type="email" name="e-mail" required><br><br>
+                <p>¿Desea recibir info sobre nosotros?</p> <input class="checkbox" type="checkbox" name="cb_neswletter"
+                    required><br><br>
+            </form>
+            <form action="post" class="box-c2">
+                <p>Estado civil:</p>
+                <select class="select-contact" name="estadocivil" required>
+                    <option value="casado">Casado</option>
+                    <option value="soltero">Soltero</option>
+                    <option value="divorciado">Divorciado</option>
+                </select><br><br>
+                <p>Dejenos sus comentarios:</p>
+                <textarea class="textarea" name="comentarios" required></textarea>
+            </form>
+            <div class="box-c3">
+                <input class="reset" type="reset" name="btn_clearform" value="Limpiar formulario"><br><br>
+                <input class="submit" type="submit" name="btn_submit">
             </div>
-            <div class="vid">
-                <iframe src="https://www.youtube.com/embed/FtD7hBacnTo" title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                </iframe>
-                <div class="vid-description">
+        </div>
+    </section>
 
-                </div>
-            </div>
-            <div class="form-suc">
-                <h1>Busqueda de sucursales:</h1>
-                <form method="post"><select class="CmbBoxSucursal" required>
-                        <option value="seleccione">Seleccione una sucursal</option>
-                        <option value="cordoba">Córdoba</option>
-                        <option value="mendoza">Mendoza</option>
-                        <option value="bsAs">Buenos Aires</option>
-                        <option value="rioNegro">Rio Negro</option>
-                        <option value="jujuy">Jujuy</option>
-                        <option value="sanJuan">San Juan</option>
-                        <option value="tierraDelFuego">Tierra del Fuego</option>
-                        <option value="sanLuis">San Luis</option>
-                    </select>
-                </form>
-        </section>
+    <!------------------------------------------------ FOOTER -->
+    <footer class="contenedor-footer">
+        <div class="redes">
+            <a href="https://www.facebook.com" class="fbIcon" target="_blank">
+                <img src="assets/img/facebook.jpg " alt="facebook_iniciar_sesion"></a>
 
+            <a href="https://www.instagram.com" class="igIcon" target="_blank">
+                <img src="assets/img/instagram.jpg " alt="instagram_iniciar_sesion"></a>
 
-        <!---------------------------------------- SECC ABOUT US -->
+            <a href="https://www.twitter.com" class="twIcon" target="_blank">
+                <img src="assets/img/twitter.jpg" alt="tweeter_iniciar_sesion"></a>
+        </div>
 
-        <section class="main_us" id="us">
-            <div>
+        <div class="copyright">
+            <p>©Copyright - Nueva Medicina</p>
+        </div>
 
-            </div>
-
-            <!-- TEXTO ABOUT US -->
-            <div class="historia historia-tbl">
-                <p>El servicio integral de <span class="span-1">Nueva Medicina Internación Domiciliaria</span> , se
-                    encuentra capacitado
-                    para asistir
-                    al paciente de
-                    manera activa y personalizada en su propio hogar. Ocupándose de todas y cada una de sus
-                    necesidades.
-                    Cuidándolo con
-                    rigor científico, y acompañándolo con afecto y dedicación, respetando su persona y su dignidad
-                    humana. Privilegiando al
-                    paciente y a su entorno familiar en el entorno terapéutico idóneo para el <span class="span-2">SU
-                        HOGAR.</span>
-                    Nuestro personal cuenta, con un amplio conocimiento en el manejo de equipos de última
-                    generación
-                    aplicados al
-                    tratamiento de múltiples patologías, como así también a la rehabilitaciónde pacientes en
-                    recuperación.
-                </p>
-            </div>
-
-        </section>
-
-        <!------------------------------------------ SECCC CONTACTO -->
-        <section class="main_contact" id="contact">
-
-            <!-------------------------- CARRUSEL -->
-            <div class="h2-carrusel">
-                <h2><i>QUIENES CONFIAN EN <span>NOSOTROS</span></i></h2>
-            </div>
-            <div class="carrusel" id="slider">
-            </div>
-
-            <!------------------------------------------ FORMULARIO CONTACTO -->
-            <div class="form-contact">
-                <form method="post" class="form-left box-c1">
-                    <p>Nombre:</p> <input type="text" name="nombre" required><br><br>
-                    <p>Apellido:</p><input type="text" name="apellido" required><br><br>
-                    <p>E-mail:</p><input type="email" name="e-mail" required><br><br>
-                    <p>¿Desea recibir info sobre nosotros?</p> <input class="checkbox" type="checkbox"
-                        name="cb_neswletter" required><br><br>
-                </form>
-                <form action="post" class="form-right box-c2">
-                    <p>Estado civil:</p>
-                    <select class="select-contact" name="estadocivil" required>
-                        <option value="casado">Casado</option>
-                        <option value="soltero">Soltero</option>
-                        <option value="divorciado">Divorciado</option>
-                    </select><br><br>
-                    <p>Dejenos sus comentarios:</p>
-                    <textarea class="textarea" name="comentarios" cols="30" rows="10" required></textarea>
-                </form>
-                <div class="inputs-contact box-c3">
-                    <input class="reset" type="reset" name="btn_clearform" value="Limpiar formulario"><br><br>
-                    <input class="submit" type="submit" name="btn_submit">
-                </div>
-            </div>
-        </section>
-
-        <!------------------------------------------------ FOOTER -->
-        <footer class="contenedor-footer">
-            <div class="redes">
-                <a href="https://www.facebook.com" class="fbIcon" target="_blank">
-                    <img src="assets/img/facebook.jpg " alt="facebook_iniciar_sesion"></a>
-
-                <a href="https://www.instagram.com" class="igIcon" target="_blank">
-                    <img src="assets/img/instagram.jpg " alt="instagram_iniciar_sesion"></a>
-
-                <a href="https://www.twitter.com" class="twIcon" target="_blank">
-                    <img src="assets/img/twitter.jpg" alt="tweeter_iniciar_sesion"></a>
-            </div>
-
-            <div class="copyright">
-                <p>©Copyright - Nueva Medicina</p>
-            </div>
-
-        </footer>
+    </footer>
     </div>
 </body>
 
