--- a/pages/prestaciones.html
+++ b/pages/prestaciones.html
@@ -29,15 +29,16 @@
             <button class="open-menu" aria-label="abrir menu">
                 <img src="../assets/img/bars.svg" alt="abrir menu">
             </button>
+            <!----------------------------------------- MENU -->
             <ul class="menu">
-                <button class="close-menu" aria-label="cerrar menu">
-                    <img src="../assets/img/close.svg" alt="cerrar menu">
+                <button class="close-menu" aria-label="Cerrar menú">
+                    <img height="50" width="70" src="assets/img/close.svg" alt="cerrar menu">
                 </button>
-                <li><a href="../pages/prestaciones.html">Prestaciones</a></li>
-                <li><a href="../index.html">Sucursales</a></li>
-                <li><a href="../index.html">Nosotros</a></li>
-                <li><a href="../index.html">Contacto</a></li>
-                <li><a href="../pages/login.html">Ingresar</a></li>
+                <li><a href="../index.html">sucursales</a></li>
+                <li><a href="../index.html">nosotros</a></li>
+                <li><a href="../index.html">contacto</a></li>
+                <li><a href="../pages/prestaciones.html">prestaciones</a></li>
+                <li><a class="login" href="../pages/login.html">ingresar</a></li>
             </ul>
         </nav>
     </header>
@@ -46,31 +47,63 @@
 
     <body>
 
-        <div class="grid-prest">
-
-            <div class="prest2">
-                <div class="imgServ imgServ-1"><a href=""><img src="../assets/img/serv/1.png" alt=""></a></div>
-                <div class="imgServ imgServ-2"><a href=""><img src="../assets/img/serv/2.png" alt=""></a></div>
-                <div class="imgServ imgServ-3"><a href=""><img src="../assets/img/serv/3.png" alt=""></a></div>
-                <div class="imgServ imgServ-4"><a href=""><img src="../assets/img/serv/4.png" alt=""></a></div>
-                <div class="imgServ imgServ-5"><a href=""><img src="../assets/img/serv/5.png" alt=""></a></div>
-                <div class="imgServ imgServ-6"><a href=""><img src="../assets/img/serv/6.png" alt=""></a></div>
-                <div class="imgServ imgServ-7"><a href=""><img src="../assets/img/serv/7.png" alt=""></a></div>
-                <div class="imgServ imgServ-8"><a href=""><img src="../assets/img/serv/8.png" alt=""></a></div>
-                <div class="imgServ imgServ-9"><a href=""><img src="../assets/img/serv/9.png" alt=""></a></div>
-                <div class="imgServ imgServ-10"><a href=""><img src="../assets/img/serv/10.png" alt=""></a></div>
-                <div class="imgServ imgServ-11"><a href=""><img src="../assets/img/serv/11.png" alt=""></a></div>
-                <div class="imgServ imgServ-12"><a href=""><img src="../assets/img/serv/12.png" alt=""></a></div>
+        <div class="main_prest">
+            <div>
+                <h2 class="prest-txt">
+                    SERVICIOS DESTACADOS</h2>
             </div>
+            <div class="prest1">
 
+                <div class=" imgServ-1">
+                    <a href="../pages/enf.html">
+                        <img src="../assets/img/serv/3.png" alt="enfermeria">
+                    </a>
+                </div>
+                <div class=" imgServ-2">
+                    <a href="../pages/kinesiologia.html">
+                        <img src="../assets/img/serv/5.png" alt="kinesiologia">
+                    </a>
+                </div>
+                <div class=" imgServ-3">
+                    <a href="../pages/nutricion.html">
+                        <img src="../assets/img/serv/10.png" alt="nutrición">
+                    </a>
+                </div>
+            </div>
 
             <div class="prest3">
-                <p>Nueva Medicina ofrece prestaciones para el cuidado de pacientes con diagnósticos agudos en donde los
-                    síntomas aparecen,
-                    cambian o empeoran rápidamente. Enfoque en el monitoreo y asistencia para la prevención,
-                    rehabilitación y/o disminución
-                    de efectos secundarios.
+                <p><i>
+                        Nueva Medicina ofrece prestaciones para el cuidado de pacientes con diagnósticos agudos en donde
+                        los
+                        síntomas aparecen,
+                        cambian o empeoran rápidamente. Enfoque en el monitoreo y asistencia para la prevención,
+                        rehabilitación y/o disminución
+                        de efectos secundarios.
+                    </i>
+                    </i></p>
             </div>
+            <div>
+                <h3 class="prest-txt">
+                    TODOS NUESTROS SERVICIOS</h3>
+            </div>
+
+            <div class="prest2">
+                <div><a href=""><img src="../assets/img/serv/1.png" alt="medicos coordinadores"></a></div>
+                <div><a href=""><img src="../assets/img/serv/2.png" alt="medicos interconsultores"></a></div>
+                <div><a href=""><img src="../assets/img/serv/3.png" alt="enfermeria general"></a></div>
+                <div><a href=""><img src="../assets/img/serv/4.png" alt="psicologia"></a></div>
+                <div><a href=""><img src="../assets/img/serv/5.png" alt="kinesiologia"></a></div>
+                <div><a href=""><img src="../assets/img/serv/6.png" alt="estimulacion temprana"></a></div>
+                <div><a href=""><img src="../assets/img/serv/7.png" alt="psicomotricidad"></a></div>
+                <div><a href=""><img src="../assets/img/serv/8.png" alt="fonoadiologia"></a></div>
+                <div><a href=""><img src="../assets/img/serv/9.png" alt="terapia ocupacional"></a></div>
+                <div><a href=""><img src="../assets/img/serv/10.png" alt="nutricion"></a></div>
+                <div><a href=""><img src="../assets/img/serv/11.png" alt="aistente social"></a></div>
+                <div clas><a href=""><img src="../assets/img/serv/12.png" alt="acompañante terapeutico"></a></div>
+            </div>
+
+
+
         </div>
     </body>
 
